- distinctHintCount defaults to 1 and is forced to be >1 if symbol is indexed - removing dependency on thrift from nfsdb-test-model - renamed Symbolndex.put() to Symbolndex.add(). Corrected attribute names in nfsdb.xml in tools. mode is not a symbol anymore. 3,000,000 appends are fine now. - strings are stored uniformly with length always being 4 byte int. This removed fork code that slows down string append and read. - SymboIndex now has cursor over rowids. "all" queries return data in descending order. Logging now produces logger name. Moved uses of SymbolIndex.getValues() to Cursor - network replication